tests/ui/variance/variance-uniquerc.stderr
error: lifetime may not live long enough
  --> $DIR/variance-uniquerc.rs:17:5
   |
LL | fn extend_lifetime<'a, 'b>(x: &'a str) -> &'b str {
   |                    --  -- lifetime `'b` defined here
   |                    |
   |                    lifetime `'a` defined here
...
LL |     *r // &'static str, coerces to &'b str
   |     ^^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`
   |
   = help: consider adding the following bound: `'a: 'b`

error: aborting due to 1 previous error

